  o Allowed websocket-server to gracefully handle SIGTERM.

Changes in version 1.3
  o Added a new observed Google public key pin.

Changes in version 1.2
  o The facilitator daemons have a --privdrop-user option that causes
    them to change to another user ID after reading keys and opening log
    files. facilitator-howto.txt shows how to configure them to use an
    unprivileged facilitator-nobody user. Patch by Alexandre Allaire and
    David Fifield. Fixes bug 8424.

  o Proxies now send the list of clients they are currently serving in
    their facilitator polling requests. This is meant to enable the
    facilitator to estimate the level of service each client is getting.
    Proxies send a protocol revision number "r=1" to signify the change.

  o The managed transport method name "flashproxy" is now recognized as
    a synonym for "websocket".

  o The badge localization now understands language subtags such as
    "ru-RU". Fixes bug 8828.

  o Language tags for badge localization are now case-insensitive.
    Patch by Eduardo Stalinho. Fixes bug 8829.

  o The badge localization is taken from the JavaScript property
    window.navigator.language when possible. Patch by Arlo Breault.
    Fixes bug 8827.

  o Proxies now attempt to connect to the client first, and only connect
    to the relay after the client connection is successful. This is
    meant to reduce the number of connections to the relay when clients
    haven't set up port forwarding. Introduced bug 9009, later fixed. 

  o A proxy no longer contacts the facilitator when it is given the
    "client" and "relay" parameters. It serves the one given client and
    then stops. Patch by Arlo Breault. Fixes bug 9006.

  o facilitator-email-poller ignores messages received a long time ago.
    This is to fix the situation where facilitator-email-poller stops
    running for some reason, comes back after some hours, and then
    flushes a lot of no-longer-relevant registrations out to proxies.