@@ -1,3 +1,4 @@
+DESTDIR =
 PREFIX = /usr/local
 BINDIR = $(PREFIX)/bin
 
@@ -5,9 +6,9 @@ all:
 	:
 
 install:
-	mkdir -p $(BINDIR)
-	cp -f facilitator facilitator-email-poller facilitator-reg-daemon facilitator-reg facilitator.cgi fac.py $(BINDIR)
-	cp -f init.d/facilitator init.d/facilitator-email-poller init.d/facilitator-reg-daemon /etc/init.d/
+	mkdir -p $(DESTDIR)$(BINDIR)
+	cp -f facilitator facilitator-email-poller facilitator-reg-daemon facilitator-reg facilitator.cgi fac.py $(DESTDIR)$(BINDIR)
+	cp -f init.d/facilitator init.d/facilitator-email-poller init.d/facilitator-reg-daemon $(DESTDIR)/etc/init.d/
 
 clean:
 	rm -f *.pyc
