@@ -1,5 +1,8 @@
   o Allowed websocket-server to gracefully handle SIGTERM.
 
+  o Makefiles that install now obey DESTDIR to install relative to a
+    different root.
+
 Changes in version 1.3
   o Added a new observed Google public key pin.
 
